--- a/src/app/countries/country-detail/country-detail.component.scss
+++ b/src/app/countries/country-detail/country-detail.component.scss
@@ -21,13 +21,17 @@
 .button {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.19), 0 1px 1px rgba(0, 0, 0, 0.23);
 }
-.dark{
-  background-color: #2B3743!important;
+.dark {
+  background-color: #2b3743 !important;
   color: white;
 }
 
-.dark-btn{
-  background-color: #2B3743!important;
+.dark-btn {
+  background-color: #2b3743 !important;
   color: white;
-  border: 1px solid rgba(255, 255, 255, 0.2)!important;
+  border: 1px solid rgba(255, 255, 255, 0.2) !important;
+}
+
+.img {
+  box-shadow: 1px 1px 4px #2b3743;
 }
